--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload coverage reports
         uses: codecov/codecov-action@v5
         with:
-          file: ./coverage/lcov.info
+          files: ./coverage/lcov.info
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
@@ -64,7 +64,6 @@ jobs:
     name: E2E Tests
     runs-on: ubuntu-latest
     needs: lint
-    environment: integration
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
@@ -103,7 +102,7 @@ jobs:
         uses: codecov/codecov-action@v5
         if: success()
         with:
-          file: ./coverage/lcov.info
+          files: ./coverage/lcov.info
           flags: e2e
           name: codecov-umbrella
           fail_ci_if_error: false
