--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.1.3",
-    "@astrojs/react": "4.2.2",
+    "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "3.3.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
@@ -56,8 +56,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "4.0.17",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "astro": "5.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,9 +66,9 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.487.0",
     "openai": "^5.12.2",
-    "react": "19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.1.0",
